# kapa-interview

./: .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  output_markdown.txt  problems_thoughprocess.md  problems_thoughprocess.txt  pyproject.toml  pyrightconfig.json  requirements.txt  requirements.txt.bkp  setup.py
app/: streamlit_app.py
data/processed_pages/basic_pymu/: efm8bb3-datasheet.md  esp8266_hardware_design_guidelines.md
data/processed_pages/llm/: 21098-ESPS2WROOM-scan_page_0.md  21098-ESPS2WROOM-scan_page_1.md  efm8bb3-datasheet_page_0.md  efm8bb3-datasheet_page_1.md  efm8bb3-datasheet_page_10.md  efm8bb3-datasheet_page_11.md  efm8bb3-datasheet_page_12.md  efm8bb3-datasheet_page_13.md  efm8bb3-datasheet_page_14.md  efm8bb3-datasheet_page_15.md  efm8bb3-datasheet_page_16.md  efm8bb3-datasheet_page_17.md  efm8bb3-datasheet_page_18.md  efm8bb3-datasheet_page_19.md  efm8bb3-datasheet_page_2.md  efm8bb3-datasheet_page_20.md  efm8bb3-datasheet_page_21.md  efm8bb3-datasheet_page_22.md  efm8bb3-datasheet_page_23.md  efm8bb3-datasheet_page_24.md  efm8bb3-datasheet_page_25.md  efm8bb3-datasheet_page_26.md  efm8bb3-datasheet_page_27.md  efm8bb3-datasheet_page_28.md  efm8bb3-datasheet_page_29.md  efm8bb3-datasheet_page_3.md  efm8bb3-datasheet_page_30.md  efm8bb3-datasheet_page_31.md  (+101 more)
src/: __init__.py
src/agent/: __init__.py  rag_agent.py  text_markdown_agent.py  types.py
src/chunker/: __init__.py  base.py  markdown_section_chunker.py
src/converter/: __init__.py  base.py  enhanced_pymu_converter.py  factory.py  hybrid_ocr_converter.py  llm_vision_converter.py  pymu.py  pymu_hybrid_withpages.py
src/kapa_pdf_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/loader/: __init__.py  pdf_loader.py
src/vector_store/: __init__.py  in_memory.py
tests/: test_pdf_to_md_conversion.py  test_pdf_to_md_conversion_hybrid_withpages.py
(+129 files in other folders)
